fix(cross): #3387.1 change page slugs
- Changed slug for continuous and oneshot hacking pages


Former-commit-id: 4fb4c138e3b9fe496fa3e908196b44330b02b91e

--- a/content/blog/sast-sca-kiuwan/index.adoc
+++ b/content/blog/sast-sca-kiuwan/index.adoc
@@ -162,5 +162,5 @@ At `Fluid Attacks`, to keep false positive
 and false negative records near `ZERO`,
 we go beyond the use of automatic tools and employ human acumen and sagacity.
 
-We invite you to approach us to learn more about our [inner]#link:../../use-cases/continuous/[services]#.
+We invite you to approach us to learn more about our [inner]#link:../../use-cases/continuous-hacking/[services]#.
 [inner]#link:../../contact-us/[Contact us!]#
