--- a/content/pages/services/differentiators/index.adoc
+++ b/content/pages/services/differentiators/index.adoc
@@ -26,8 +26,8 @@ a|==== Independence
 | {yes} We don't install, maintain, operate or sell other security products.
 With no hidden agendas, you can have confidence
 in the independence and impartiality of our report
-link:../../use-cases/continuous/remediation/[^1^]
-link:../../use-cases/one-shot/[^2^].
+link:../../use-cases/continuous-hacking/remediation/[^1^]
+link:../../use-cases/one-shot-hacking/[^2^].
 | {no}  Since other providers develop, maintain, install or operate
 security controls such as `SOC`, `NAC`, Firewalls etc,
 they may not be truly impartial nor independent.
@@ -56,8 +56,8 @@ a|==== Method
 
 a|==== Team
 a|{yes} Our hackers are certified in practical hacking in real scenarios
-link:../../use-cases/continuous/[^3^]
-link:../../use-cases/one-shot/[^4^]:
+link:../../use-cases/continuous-hacking/[^3^]
+link:../../use-cases/one-shot-hacking/[^4^]:
 
 * `OSCP`.
 * `OSWP`.
@@ -75,8 +75,8 @@ through questions and answers:
 
 a|==== Model
 | `Red Team`
-link:../../use-cases/continuous/hacking-techniques/[^5^]
-link:../../use-cases/one-shot/hacking-techniques/[^6^].
+link:../../use-cases/continuous-hacking/hacking-tech/[^5^]
+link:../../use-cases/one-shot-hacking/hacking-tech/[^6^].
 | Vulnerability Analysis with selective exploitation.
 
 a|==== Targets
@@ -97,10 +97,10 @@ a|* Web applications.
 
 a|==== Techniques
 a|{yes} 1 service, all the techniques
-link:../../use-cases/continuous/mock-attacks/[^7^]
-link:../../use-cases/continuous/critical-information/[^8^]
-link:../../use-cases/one-shot/infection/[^9^]
-link:../../use-cases/one-shot/critical-information/[^10^]:
+link:../../use-cases/continuous-hacking/mock-attacks/[^7^]
+link:../../use-cases/continuous-hacking/critical-info/[^8^]
+link:../../use-cases/one-shot-hacking/infection/[^9^]
+link:../../use-cases/one-shot-hacking/critical-info/[^10^]:
 
 * link:../../blog/fuzzy-bugs-online/[Fuzzing].
 * Dynamic (`DAST`), Static (`SAST`) and Interactive (`IAST`) Security Testing.
@@ -116,8 +116,8 @@ link:../../use-cases/one-shot/critical-information/[^10^]:
 
 a|==== link:../../blog/delimit-ethical-hacking/[Scope]
 a|{yes} Precision and granularity in the attack surface
-link:../../use-cases/continuous/environments/[^11^]
-link:../../use-cases/one-shot/environments/[^12^]:
+link:../../use-cases/continuous-hacking/environments/[^11^]
+link:../../use-cases/one-shot-hacking/environments/[^12^]:
 
 * For infrastructure (networks, servers, etc),
 according to `TCP` and `UDP` open ports.
@@ -148,7 +148,7 @@ a|{yes} Integrable with any development method, such as:
 * Agile.
 * `DevOps`.
 
-[button]#link:../../use-cases/continuous/[Continuous Hacking]#, +
+[button]#link:../../use-cases/continuous-hacking/[Continuous Hacking]#, +
 {sp} +
 [button]#link:../../products/integrates/[Integrates]# +
 {sp} +
@@ -161,18 +161,18 @@ a|{no} Integrable with a single development method:
 
 a|==== Environments
 a|* Integration:
-[button]#link:../../use-cases/continuous/[Continuous Hacking]#
+[button]#link:../../use-cases/continuous-hacking/[Continuous Hacking]#
 and [button]#link:../../asserts/[Asserts]#
 fit perfectly in this use case
-link:../../use-cases/continuous/environments/[^13^]
-link:../../use-cases/one-shot/environments/[^14^].
+link:../../use-cases/continuous-hacking/environments/[^13^]
+link:../../use-cases/one-shot-hacking/environments/[^14^].
 * Staging.
 * Production.
 a|* Staging.
 * Production.
 
 a|==== Windows
-a|{yes} In the [button]#link:../../use-cases/continuous/[Continuous Hacking]#
+a|{yes} In the [button]#link:../../use-cases/continuous-hacking/[Continuous Hacking]#
 service environments:
 
 * Can constantly change.
@@ -182,8 +182,8 @@ service environments:
 
 a|==== Coverage
 a|{yes} Known
-link:../../use-cases/continuous/environments/[^15^]
-link:../../use-cases/one-shot/environments/[^16^]:
+link:../../use-cases/continuous-hacking/environments/[^15^]
+link:../../use-cases/one-shot-hacking/environments/[^16^]:
 
 * In fixed scopes the exact part of the attack surface to be verified,
 and its proportion with respect to the total, is agreed upon in advance.
@@ -204,8 +204,8 @@ a|==== Strictness
 | {yes} You will know the exact strictness of the hacking
 (for inspected and non-inspected
 link:#profiling[profiled] requirements)
-link:../../use-cases/continuous/environments/[^17^]
-link:../../use-cases/one-shot/environments/[^18^].
+link:../../use-cases/continuous-hacking/environments/[^17^]
+link:../../use-cases/one-shot-hacking/environments/[^18^].
 | {no} Unknown.
 
 a|==== Finding Types
@@ -226,7 +226,7 @@ a|{no} In the case of other suppliers:
 * Copy-paste of test outcomes which may include false positives.
 
 a|==== Zero Day Vulnerabilities
-| {yes} Yes link:../../use-cases/continuous/hacking-techniques/[^19^]
+| {yes} Yes link:../../use-cases/continuous-hacking/hacking-tech/[^19^]
 | {no} No
 
 a|==== False Positives
@@ -235,8 +235,8 @@ a|==== False Positives
 
 a|==== Exploitation
 a|{yes} Yes, as long as we have
-link:../../use-cases/continuous/mock-attacks/[^20^]
-link:../../use-cases/one-shot/infection/[^21^]:
+link:../../use-cases/continuous-hacking/mock-attacks/[^20^]
+link:../../use-cases/one-shot-hacking/infection/[^21^]:
 
 * An available environment.
 * The appropriate authorization.
@@ -254,7 +254,7 @@ a new vulnerability `C` of greater impact which may compromise more registers.
 but it's not able to correlate them.
 
 a|==== Infection
-| {yes} In our [button]#link:../../use-cases/one-shot/infection/[One shot hacking]#
+| {yes} In our [button]#link:../../use-cases/one-shot-hacking/infection/[One shot hacking]#
 service we infect stations and critical servers
 using cyberweapons.
 | {no} Don't infect or dispose of cyberweapons.
@@ -278,8 +278,8 @@ This allows us to show the severity of any individual vulnerability on:
 a|==== Cycles
 | {yes} Multiple cycles in our service: +
 {sp} +
-[button]#link:../../use-cases/continuous/[Continuous Hacking]#
-link:../../use-cases/continuous/hacking-techniques/[^23^].
+[button]#link:../../use-cases/continuous-hacking/[Continuous Hacking]#
+link:../../use-cases/continuous-hacking/hacking-tech/[^23^].
 | {no}  Only 1.
 
 a|==== link:../../blog/replaced-machines/[Escapes]
@@ -290,8 +290,8 @@ a|==== Remediation
 a|* During the project you can request clarifications
 directly from our hackers via
 [button]#link:../../products/integrates/[Integrates]#.
-link:../../use-cases/continuous/remediation/[^24^]
-link:../../use-cases/one-shot/[^25^].
+link:../../use-cases/continuous-hacking/remediation/[^24^]
+link:../../use-cases/one-shot-hacking/[^25^].
 | {no} No support during remediation phase.
 
 a|==== Deliverables
@@ -299,8 +299,8 @@ a|{yes} Real-time documentation web system
 [button]#link:../../products/integrates/[Integrates]#
 which allows our customers to auto generate and supervise
 every system since day 1 of the project
-link:../../use-cases/continuous/vuln-management/[^26^]
-link:../../use-cases/one-shot/vuln-management/[^27^]:
+link:../../use-cases/continuous-hacking/vuln-manage/[^26^]
+link:../../use-cases/one-shot-hacking/vuln-management/[^27^]:
 
 * Executive report in `PDF`.
 * Technical report in `XLS`.
@@ -317,8 +317,8 @@ because it is manually generated.
 a|==== End
 |{yes} Our service ends when the agreed upon scope is completed,
 without any increase in cost to you.
-link:../../use-cases/continuous/critical-information/[^28^]
-link:../../use-cases/one-shot/critical-information/[^29^]
+link:../../use-cases/continuous-hacking/critical-info/[^28^]
+link:../../use-cases/one-shot-hacking/critical-info/[^29^]
 |{no} The service ends
 when a prior agreed upon time limit for the project runs out.
 Therefore, the scope and coverage was not defined and is unknown.
