feat(doc): #2994.168 add refs to some rules
- Added CWE reference to R035 and R186
- Added ASVS reference to R186
- fixed some minor typos


Former-commit-id: 9007aa87aae56bccc980eead6b9962239d3c5f21

--- a/content/pages/rules/authorization/035/index.adoc
+++ b/content/pages/rules/authorization/035/index.adoc
@@ -28,28 +28,32 @@ resources.
 
 == References
 
-. [[r1]] link:https://cwe.mitre.org/data/definitions/267.html[CWE-267: Privilege Defined With Unsafe Actions]
+. [[r1]] link:https://cwe.mitre.org/data/definitions/267.html[CWE-267: Privilege Defined With Unsafe Actions].
 A particular privilege, role, capability, or right can be used to perform
 unsafe actions that were not intended,
 even when it is assigned to the correct entity.
 
-. [[r2]] link:https://cwe.mitre.org/data/definitions/269.html[CWE-269: Improper Privilege Management]
+. [[r2]] link:https://cwe.mitre.org/data/definitions/269.html[CWE-269: Improper Privilege Management].
 The software does not properly assign, modify, track, or check privileges for
 an actor,
 creating an unintended sphere of control for that actor.
 
-. [[r3]] link:https://cwe.mitre.org/data/definitions/639.html[CWE-639: Authorization Bypass Through User-Controlled Key]
+. [[r3]] link:https://cwe.mitre.org/data/definitions/285.html[CWE-285: Improper Authorization].
+The software does not perform or incorrectly performs an authorization check
+when an actor attempts to access a resource or perform an action.
+
+. [[r4]] link:https://cwe.mitre.org/data/definitions/639.html[CWE-639: Authorization Bypass Through User-Controlled Key]
 The system's authorization functionality does not prevent one user from gaining
 access to another user's data or record by modifying the key value identifying
 the data.
 
-. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V4.1 General Access Control Design.(4.1.2)]
 Verify that all user and data attributes and policy information used by access
 controls cannot be manipulated by end users unless specifically authorized.
 
-. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
-V4.1 General Access Control Design.(4.2.3)]
+. [[r6]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V4.1 General Access Control Design.(4.1.3)]
 Verify that the principle of least privilege exists - users should only be able
 to access functions, data files, URLs, controllers, services, and other
 resources, for which they possess specific authorization.
