fix(front): #3291 fix more breadcrumb links
Former-commit-id: 6a225a0bdeb6734fa94e9fcfe9743c9c2c7c9da7

--- a/content/pages/events/securing-device/index.adoc
+++ b/content/pages/events/securing-device/index.adoc
@@ -2,6 +2,7 @@
 :category: events
 :description: This page aims to inform the customer about the different talks offered by Fluid Attacks. Securing your Mobile Device conference aims to inform about the risks that smartphone users are constantly exposed and unaware of, as well as the implications and countermeasures to mitigate those risks.
 :keywords: Fluid Attacks, Talks, Mobile Device, Events, Security, Smartphone
+:eventspage: yes
 
 = Securing your Mobile Device
 
