--- a/content/pages/events/breaking-the-build/index.adoc
+++ b/content/pages/events/breaking-the-build/index.adoc
@@ -3,6 +3,7 @@
 :category: events
 :description: This page aims to inform the customer about the different talks offered by Fluid Attacks. In the Breaking the Build conference we talk about our SecDevOps habits that allow us to keep improving and changing every day, and the first steps to implement these habits on your company.
 :keywords: Fluid Attacks, SecDevOps, Security, Development, Technology, CI-CD.
+:eventspage: yes
 
 = Breaking the build
 
