--- a/content/pages/events/burn-the-datacenter/index.adoc
+++ b/content/pages/events/burn-the-datacenter/index.adoc
@@ -3,6 +3,7 @@
 :category: events
 :description: This page aims to inform the customer about the different talks offered by Fluid Attacks. The Burn the datacenter conference seeks to socialize our belief in the future for technologies and software development for the next 10 years, according to the opinion of our experts.
 :keywords: Fluid Attacks, Burn the datacenter, Technology, Continuous Integration, Infrastructure, Code
+:eventspage: yes
 
 = Burn the Datacenter
 
