--- a/content/pages/partners/terms/index.adoc
+++ b/content/pages/partners/terms/index.adoc
@@ -2,6 +2,7 @@
 :category: partners
 :description: Terms of the contractual relationship between Fluid Attacks and its PARTNERS. Commissions, cut-off dates,  and goals to be achieved to stay within a commission range are specified, among other aspects. These can change at any time and are established only by signing the physical document.
 :keywords: Fluid Attacks, Partners, Pentesting, Terms, Agreement, Information Security.
+:partnerspage: yes
 
 = Partners Terms
 
