feat(doc): #2994.169 add refs to some rules
- Added ASVS and CWE references to R095, R096 and R186
- Added a Description to R095
- Updated R095 and R186 keywords
- Fixed some minor typos


Former-commit-id: 5948a7ad8b1d2bb34b134308abe681e8e07a7fca

--- a/content/pages/rules/authorization/035/index.adoc
+++ b/content/pages/rules/authorization/035/index.adoc
@@ -42,7 +42,7 @@ creating an unintended sphere of control for that actor.
 The software does not perform or incorrectly performs an authorization check
 when an actor attempts to access a resource or perform an action.
 
-. [[r4]] link:https://cwe.mitre.org/data/definitions/639.html[CWE-639: Authorization Bypass Through User-Controlled Key]
+. [[r4]] link:https://cwe.mitre.org/data/definitions/639.html[CWE-639: Authorization Bypass Through User-Controlled Key].
 The system's authorization functionality does not prevent one user from gaining
 access to another user's data or record by modifying the key value identifying
 the data.
