--- a/content/pages/rules/authorization/096/index.adoc
+++ b/content/pages/rules/authorization/096/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/096/
 :category: authorization
 :description: This document contains the details of the security requirements related to the definition and management of access control in the organization. This requirement establishes the importance of defining the required privileges for each user to access the sensitive information of the organization.
-:keywords: Access Control, Privileges, ASVS, HIPAA, NIST, CWE
+:keywords: Access Control, Required, Privileges, ASVS, HIPAA, NIST
 :rules: yes
 
 = R096. Set user required privileges
@@ -30,47 +30,57 @@ should also be clearly stated.
 
 == References
 
-. [[r1]] link:https://cwe.mitre.org/data/definitions/287.html[CWE-287: Improper Authentication]
+. [[r1]] link:https://cwe.mitre.org/data/definitions/276.html[CWE-276: Incorrect Default Permissions].
+The product, upon installation, sets incorrect permissions for an object that
+exposes it to an unintended actor.
+
+. [[r2]] link:https://cwe.mitre.org/data/definitions/287.html[CWE-287: Improper Authentication].
 When an actor claims to have a given identity,
 the software does not prove or insufficiently proves that the claim is correct.
 
-. [[r2]] link:https://cwe.mitre.org/data/definitions/306.html[CWE-306: Missing Authentication for Critical Function]
+. [[r3]] link:https://cwe.mitre.org/data/definitions/306.html[CWE-306: Missing Authentication for Critical Function].
 The software does not perform any authentication for functionality that
 requires a provable user identity or consumes a significant amount of
 resources.
 
-. [[r3]] link:https://www.law.cornell.edu/cfr/text/45/164.312[HIPAA Security Rules 164.312(a)(1):]
+. [[r4]] link:https://www.law.cornell.edu/cfr/text/45/164.312[HIPAA Security Rules 164.312(a)(1):]
 Access Control: Implement technical policies and procedures
 for electronic information systems
 that maintain electronic protected health information
 to allow access only to those persons or software programs
 that have been granted access rights as specified in link:https://www.law.cornell.edu/cfr/text/45/164.308[164.308(a)(4)]
 
-. [[r4]] link:https://www.law.cornell.edu/cfr/text/45/164.312[HIPAA Security Rules 164.312(d):]
+. [[r5]] link:https://www.law.cornell.edu/cfr/text/45/164.312[HIPAA Security Rules 164.312(d):]
 Person or Entity Authentication:
 Implement procedures to verify that a person or entity
 seeking access to electronic protected health information
 is the one claimed.
 
-. [[r5]] link:https://nvd.nist.gov/800-53/Rev4/control/AC-2[NIST 800-53 AC-2 (6)]
+. [[r6]] link:https://nvd.nist.gov/800-53/Rev4/control/AC-2[NIST 800-53 AC-2 (6)]
 The information system implements the following
 dynamic privilege management capabilities:
 [Assignment: organization-defined list
 of dynamic privilege management capabilities].
 
-. [[r6]] link:https://nvd.nist.gov/800-53/Rev4/control/AC-2[NIST 800-53 AC-2 (7) a]
+. [[r7]] link:https://nvd.nist.gov/800-53/Rev4/control/AC-2[NIST 800-53 AC-2 (7) a]
 The organization establishes and administers privileged user accounts
 in accordance with a role-based access scheme
 that organizes allowed information system access and privileges into roles.
 
-. [[r7]] link:https://nvd.nist.gov/800-53/Rev4/control/AC-2[NIST 800-53 AC-2 (7) b]
+. [[r8]] link:https://nvd.nist.gov/800-53/Rev4/control/AC-2[NIST 800-53 AC-2 (7) b]
 The organization monitors privileged role assignments.
 
-. [[r8]] link:https://nvd.nist.gov/800-53/Rev4/control/AC-2[NIST 800-53 AC-2 (7) c]
+. [[r9]] link:https://nvd.nist.gov/800-53/Rev4/control/AC-2[NIST 800-53 AC-2 (7) c]
 The organization Takes [Assignment: organization-defined actions]
 when privileged role assignments are no longer appropriate.
 
-. [[r9]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r10]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V1.2 Authentication Architectural Requirements.(1.2.1)]
 Verify the use of unique or special low-privilege operating system accounts for
 all application components, services, and servers.
+
+. [[r11]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V4.1 General Access Control Design.(4.1.4)]
+Verify that the principle of deny by default exists whereby new users/roles
+start with minimal or no permissions and users/roles do not receive access to
+new features until access is explicitly assigned.
