feat(doc): #2994.170 create rule 341
- Created R341 for the principle of deny by default
- Added a Description
- Added CWE and ASVS references
- Fixed a grammar issue in R114


Former-commit-id: aca7e1a3dd90be449338ab768b9b7f30062c7701

--- a/content/pages/rules/authorization/114/index.adoc
+++ b/content/pages/rules/authorization/114/index.adoc
@@ -1,6 +1,6 @@
 :slug: rules/114/
 :category: authorization
-:description: This document contains the details of the security requirements related to the definition and management of access control in the organization. This requirement establishes the importance of managing correctly inactive users and credentials in the system in order to avoid security breaches.
+:description: This document contains the details of the security requirements related to the definition and management of access control in the organization. This requirement establishes the importance of properly managing inactive users and credentials in the system in order to avoid security breaches.
 :keywords: Requirement, Security, Credentials, Inactive Users, Access, Information
 :rules: yes
 
