--- a/content/pages/rules/source/161/index.adoc
+++ b/content/pages/rules/source/161/index.adoc
@@ -19,7 +19,7 @@ are safe and fully comply with the functions for which they were implemented.
 For this, baselines must be implemented from the design
 and development phase,
 in order to avoid bad practices in the development cycles.
-E.g the use of a conditional without a default option,
+E.g. the use of a conditional without a default option,
 which can cause unexpected behaviors in the system.
 
 The system's source code is safer when good programming practices are
@@ -40,7 +40,7 @@ analyzers. They process it, suggest improvements and highlight possible
 vulnerabilities in the development stage.
 Using this kind of tools during the development process
 helps improve performance, detect excessively complex logic
-and detect possible security issues.
+and detect potential security issues.
 
 == Attacks
 
@@ -79,5 +79,6 @@ which might lead to complex logical errors and resultant weaknesses.
 
 . [[r3]] link:https://standards.ieee.org/findstds/standard/1028-2008.html[IEEE: Standard for Software Reviews and Audits].
 
-. [[r4]] link:https://www.owasp.org/index.php/ASVS_V4_Access_Control[OWASP-ASVS v3.1-4.8]
-Verify that access controls fail securely.
+. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V4.1 General Access Control Design.(4.1.5)]
+Verify that access controls fail securely including when an exception occurs.
