--- a/content/blog/vulnserver-kstet/index.adoc
+++ b/content/blog/vulnserver-kstet/index.adoc
@@ -25,11 +25,11 @@ In previous posts, we have been able to exploit Vulnserver commands:
 . `TRUN` was link:../vulnserver-trun/[exploited] using a direct EIP overwrite,
 with virtually no space or characters restrictions to work on.
 . `GMON` used a
-link:.../vulnserver-gmon/[Structured Exception Handling (SEH)] overwrite to
+link:../vulnserver-gmon/[Structured Exception Handling (SEH)] overwrite to
 take control of the execution flow.
 . `GTER` showed up with space restrictions and we were able to exploit it
 using link:../vulnserver-gter/[egghunters] and
-link:../vulnserver-gter-noegghunter/[WinSocket stack reuse].
+link:../vulnserver-gter-no-egghunter/[WinSocket stack reuse].
 
 In this post we will exploit the `KSTET` command on where,
 as we will see later, we will be faced to a more restrictive space buffer to
@@ -207,7 +207,7 @@ And run it:
 
 image::offset2.gif[Cyclic pattern]
 
-Wonderful! We now exactly how to overwrite `EIP` to get control over the
+Wonderful! We know exactly how to overwrite `EIP` to get control over the
 execution flow.
 
 == Exploiting
@@ -349,14 +349,14 @@ Easy! The parameters are really simple:
 . `int flags` modifies the behavior of the `recv()` call. In our case it
 can be zero.
 
-We first we need to know 2 things:
+But first, we need to know 2 things:
 
 . The address of the `recv()` call in the system.
 . The value of the socket handle.
 
-To do that, we can use the debugger again, by right clicking, selecting
-`Search for -> All intermodular calls`, look for the call to
-`WS2_32.recv` and set a breakpoint:
+To do that, we can use the debugger again, by right clicking on the
+`CPU` window, selecting `Search for -> All intermodular calls`,
+look for the call to `WS2_32.recv` and set a breakpoint on it:
 
 image::recv1.gif[recv() call location]
 
@@ -390,8 +390,8 @@ add ebx,0x144           ; Make EBX = 144 that is the value of socket handle
 push ebx                ; Push `s` parameter = 144
 mov eax,0x40252C90      ; We need to make EAX = 0040252C but we can't inject
                         ; null bytes. So 40252C90 is shift-left padded with 90
-shr eax,0x8             ; Remove the '90' byte of EAX by shifting right and
-                        ; making EBX = 0040252C
+shr eax,0x8             ; Remove the '90' byte of EAX by shifting right.
+                        ; This makes EAX = 0040252C
 call eax                ; Call recv()
 ----
 
@@ -422,10 +422,10 @@ push edi                ; Push socket handle `s` parameter = EDI = EDI + 1
 mov eax,0x40252C90      ; We need to make EAX = 0040252C but we can't inject
                         ; null bytes. So 40252C90 is shift-left padded with 90
 shr eax,0x8             ; Remove the '90' byte of EAX by shifting right and
-                        ; making EBX = 0040252C
+                        ; This makes EAX = 0040252C
 call eax                ; Call recv()
 test eax,eax            ; Check if our recv() call was successfully made
-jnz socket_loop         ; If recv() failed jump back to the socket loop where
+jnz socket_loop         ; If recv() failed, jump back to the socket loop where
                         ; EDI will be increased to check the next socket handle
 ----
 
@@ -491,7 +491,7 @@ image::stage1payload.gif[Stage-1 payload]
 Wonderful! Our brute forcer was able to discover the socket handle value
 on `EDI=0x144` and it's ready to receive our stage-2 payload!
 
-== Stage 2: Injecting reverse shellcode
+== Stage 2: Injecting a reverse shellcode
 
 Now all that's left is to create a reverse shellcode and send it over our
 stage-1 payload backdoor. As a bonus, as we control the `recv()`
@@ -611,7 +611,7 @@ with socket.create_connection((HOST, PORT)) as fd:
     print('Boom!')
 ----
 
-Several things were added:
+Several things are worth to mention:
 
 . We created a `STAGE2` variable with the shellcode and padded the rest of
 the 1024 bytes with NOPs (`\x90`).
@@ -632,7 +632,7 @@ Woohooo! We got our shell! And in a lot more fun way than with egghunters, huh?
 
 == Conclusion
 
-2 stage exploitation is a very cool method to use the available bytes to
+Multistage exploitation is a very cool method to use the available bytes to
 create exploits. Tools like Metasploit use staging to deliver complex
 payloads like `Meterpreter`, but when you do it yourself is a lot more
 rewarding!
