--- a/content/blog/vulnserver-gter/index.adoc
+++ b/content/blog/vulnserver-gter/index.adoc
@@ -2,7 +2,7 @@
 :date: 2020-06-11
 :category: attacks
 :subtitle: Hunting eggs
-:tags: challenge, ethical hacking, pentesting, security, training, exploit
+:tags: osce, vulnserver, training, exploit
 :image: cover.png
 :alt: Photo by Pel on Unsplash
 :description: Vulnserver is a VbD application focused on helping people practice exploiting skills. This post will describe the steps taken to exploit the GTER command. Besides, it will outline a technique called 'Egghunting,' used when there are space restrictions for our exploitation.
