--- a/content/blog/vulnserver-kstet/index.adoc
+++ b/content/blog/vulnserver-kstet/index.adoc
@@ -2,7 +2,7 @@
 :date: 2020-06-17
 :category: attacks
 :subtitle: Exploiting in stages
-:tags: challenge, ethical hacking, pentesting, security, training, exploit
+:tags: osce, vulnserver, training, exploit
 :image: cover.png
 :alt: Photo by Ganapathy Kumar on Unsplash
 :description: This series of posts deal on hacking Vulnserver, a Vulnerable-by-Design application that can used to practice Windows explotation. We've been faced to several kinds of restrictions and we've been able to overcome them. This post will show how to exploit the KSTET command using a different method.
